# CS344

assignment1/: CMakeLists.txt  student_func.cu
assignment2/: CMakeLists.txt  student_func.cu
assignment3/: CMakeLists.txt
